Complete the removal of Guava